  - No open QPainters are passed around in the KWFormatContext anymore,
    as these painters were not needed anymore since a long time now => I
    could remove the hacks to avoid two opened painters at one paint device
  - Reorganized/Rewrite some code in KWPage => no doubled code there anymore
  - Selecting text flickers not that much anymore (I'll also work on that more)

BUTTTTHH (tm): I didn't test it lot yet, so many things are for sure broken. I'll do
testing + fixing + more cleanups from now on

Reggie, 10.6.1999:
------------------
- More cleanups in KWPage
- Selecting text with the keyboard is nearly completly
  flicker-free now :-))
- Started re-implementing autoscrolling and selecting
  text when setting/moving the cursor with the mouse
  (but doesn't work at all at the moment :-P )

Reggie, 11.6.1999:
------------------
- Some more flicker-freeness (there are some redraw errors now, I'll keep working on that)
- Initial position of vert. scrollbar is correct now
- Made some broken stuff working again

Reggie, 13.6.1999:
------------------
- Text edit mode is now (more or less) totally flicker-free. In the other modes
  there are still lots of redraw errors, but fixing that is the next step.
- Small improvements for more efficient drawing

Reggie, 14.6.1999:
------------------
- More work on flicker-freeness and optimations
- tell dialogs about their parent, so that the window manager
  can do some optimations

Reggie, 15.6.1999:
------------------
- Reimplemented autoscrolling when setting the cursor with the mouse

Reggie, 17.6.1999:
------------------
- Cleanups
- Fix in autoscrolling with the mouse (doesn't hang anymore)
- Started reimplementing selecting text with the mouse
  (don't try it yet, it's make lots of drawing errors :-)

Reggie, 18.6.1999:
------------------
- Cleanups
- ASCII import works :-)

Reggie, 19.6.1999:
------------------
- Fixed initial repaint problem
- Saving/Loading pictures into/from a document finally
  works now